# coursework_projec_1

./: .coverage  README.md  config.py  main.py  pyproject.toml
data/: operations_2025.xlsx
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py
